--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,8 @@
-#
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8762/eureka/
+  instance:
+    hostname: localhost  
